--- a/css/form.css
+++ b/css/form.css
@@ -5,110 +5,348 @@
 Remember to use something like type-scale.com 
 to get your font sizes
 *******************************************/
-*{
-	padding:0;
+
+* {
+
+	padding: 0;
+
 	margin: 0;
+
 }
-html, body{
-	font-family:Arial, Helvetica, sans-serif;
-	background:#cecece;
+
+html,
+
+body {
+
+	font-family: Arial, Helvetica, sans-serif;
+
+	background: #cecece;
+
 }
-body{
-	font-size: 62.5%;
+
+body {
+
+
+
 }
-h1, h2, h3, h4{
-	font-family:"Palatino Linotype", "Book Antiqua", Palatino, serif;
-	padding:1.0rem 3rem;	
+
+h1,
+
+h2 {
+
+	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+
+	padding-left: 10%;
+	padding-right: 20%
+
 }
-h1{
-	font-size: 3.6rem;	
-	color:#FC3;
+
+h1 {
+
+	font-size: 3.6rem;
+
+	color: #FC3;
+
 }
-h2{
+
+h2 {
+
 	font-size: 2.4rem;
+
 }
-h3{
-	font-size: 1.8rem;
-}
-h4{
+
+.p1{
 	font-size: 1.5rem;
+	padding: 5% 10%;
 }
-p, li{
-	font-size: 1.5rem;	
-	padding: 0.8rem 3rem;
-}
+h1,h2,p{
+		width: 80%;
+	}
 
 /******************
 Layout
 *******************/
+.wrapper {
 
-.wrapper{
-	width:1180px;
-	margin:0 auto;
-	border:1px solid #333;
+
 }
-.masthead{
+
+.masthead {
+
 	background: #666;
-	color:#fff;
-	padding-bottom: 20px;
+
+	color: #fff;
+
 	border-bottom: 6px solid #333;
+
 }
-.footer{
+
+.foot {
+    clear: both;
 	background: #666;
-	color:#fff;
-	padding-top: 20px;
+
+	color: #fff;
+
+	padding-left: 10%;
+	padding-bottom: 10px;
+	padding-top: 10px;
+
 	border-top: 6px solid #333;
+
+}
+img{
+	padding: 7px;
+	float:left;
+	
+}
+
+
+/******************
+	Form
+*******************/
+
+@media screen and (max-width: 500px) {
+	
+	.form-row{
+  width: 100%;
+}
+.clearfix:after {
+    content: ".";
+    display: block;
+    clear: both;
+    visibility: hidden;
+    line-height: 0;
+    height: 0;
+}
+ 
+.clearfix {
+    display: inline-block;
+}
+ 
+html[xmlns] .clearfix {
+    display: block;
+}
+ 
+* html .clearfix {
+    height: 1%;
+}
+	
+
+	form {
+
+		width: 80%;
+		padding-left: 10%;
+		padding-right: 10%;
+
+	}
+
+	.formBox {
+		margin-bottom: 20px;
+		margin-top: 20px;
+ 
+
+	}
+
+	label {
+
+		display: block;
+
+		width: 100%;
+		padding-left: 15%;
+		padding-bottom: 4px;
+
+		text-align: left;
+
+		font-size: 1.2rem;
+      
+		overflow: scroll;
+		
+		color: #666;
+
+
+		/* more space on the top than the bottom */
+
+
+	}
+
+	input[type=text],
+
+	input[type=number],
+
+	input[type=date] {
+
+		display: block;
+
+		text-align: left;
+
+		font-size: 1.2rem;
+
+		padding: 0.5rem 0rem;
+			
+		color: #333;
+		
+		width: 80%;
+
+	}
+
+	input[type=submit],
+
+	input[type=reset]{
+		font-size: 3rem;
+		height: 50px;
+		width: 100%;
+		margin-bottom: 3%;
+		margin-top: 3%;
+
+	
+	}
+	.buttons {
+		
+		padding: 5%;
+	
+
+
+	}
+
+}
+
+
+/******************
+	Form
+*******************/
+
+@media screen and (max-width: 780px) and (min-width: 501px) {
+	label{
+	width: 35%;
+	text-align:right;
+	float:left;
+	margin: 0 1rem 0 0 ;
+	font-size: 1.2rem;
+	padding:0.6rem 0;
+	color: #666;
+		}
+	
+	.formBox{
+	clear: both;	
+	margin: 1.0rem 0;
+	max-width: 80%;
+	padding: 2% 10%;
+}
+	.col{
+		margin-left: 4.5%;
+	
+	}
+	select{
+		margin-top: 10px;
+	}
+	
+	input[type=text],
+
+	input[type=number],
+
+	input[type=date] {
+
+		display: block;
+
+		text-align: left;
+
+		font-size: 1.2rem;
+
+		padding: 0.5rem 0rem;
+			
+		color: #333;
+		
+		width: 40%;
+
+	}
+	
+	
+		input[type=submit],input[type=reset]{
+		font-size: 3rem;
+        height: 50px;
+        width: 49%;
+
+	
+	}
+	.buttons {
+		
+		padding-bottom: 3%;
+	
+		align-content: center;
+		
+		margin: 0 auto;
+	
+		max-width: 50%;
+
+	}
+	
+
 }
 
 /******************
 	Form
 *******************/
 
-form{
-	max-width: 90%;
-}
-legend{
+@media screen and (min-width: 781px){
+		label{
+	width: 40%;
+	text-align:right;
+	float:left;
 	
-}
-.formbox{
-	margin: 1.0rem 0;	
-}
-label{
-	display:block;
-	width: 15rem;
-	text-align:left;
-	margin: 0 0 0 3rem;
+	/*margin: 0 1rem 0 0 ;*/
 	font-size: 1.2rem;
-	padding: 0.6rem 0 0.3rem 0; /* more space on the top than the bottom */
+	/*padding:0.6rem 0;*/
 	color: #666;
+		}
+	
+	.formBox {	
+		float:left;
+		width: 40%;
+		
 }
-input, select, textarea{
-	display:block;
-	text-align:left;	
-	font-size: 1.2rem;
-	padding: 0.5rem 0.5rem;
-	margin: 0 0 0 3rem;
-	color: #333;
-}
-.btn{
-	width: auto;
-}
-.narrow{
-	width: 4rem;
-}
-.med{
-	width: 20rem;
-}
-.wide{
-	width: 40rem;
-}
-.x-wide{
-	width: 60rem;
-}
-.buttons{
-	width: 100%;
-	padding:0 0 0 3rem;
-}
+	form{
+		max-width: 80%;
+	}
+	
+	input[type=text],
 
+	input[type=number],
+
+	input[type=date] {
+
+		display: block;
+
+		text-align: left;
+
+		font-size: 1rem;
+
+			
+		color: #333;
+
+	}
+	
+		input[type=submit],input[type=reset]{
+		font-size: 3rem;
+        height: 50px;
+        width: 49%;
+
+	
+	}
+	.buttons {
+		
+		padding-bottom: 3%;
+	
+		align-content: center;
+		
+		margin: 0 auto;
+	
+		max-width: 50%;
+
+	}
+	
+
+}
+	
+	
 
 
