--- a/css/form.css
+++ b/css/form.css
@@ -21,6 +21,7 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 
 	background: #cecece;
+	
 
 }
 
@@ -67,8 +68,10 @@ h1,h2,p{
 Layout
 *******************/
 .wrapper {
-
-
+	
+	max-width: 1100px;
+	margin: 0 auto;
+	
 }
 
 .masthead {
@@ -207,6 +210,10 @@ html[xmlns] .clearfix {
 
 
 	}
+	#slider{
+		margin-top: 10px;
+		
+	}
 
 }
 
@@ -232,10 +239,7 @@ html[xmlns] .clearfix {
 	max-width: 80%;
 	padding: 2% 10%;
 }
-	.col{
-		margin-left: 4.5%;
-	
-	}
+
 	select{
 		margin-top: 10px;
 	}
@@ -260,6 +264,10 @@ html[xmlns] .clearfix {
 
 	}
 	
+	#slider{
+		width: 50%;
+		float: right;
+	}
 	
 		input[type=submit],input[type=reset]{
 		font-size: 3rem;
@@ -270,7 +278,7 @@ html[xmlns] .clearfix {
 	}
 	.buttons {
 		
-		padding-bottom: 3%;
+		padding: 5% 0;
 	
 		align-content: center;
 		
@@ -288,6 +296,7 @@ html[xmlns] .clearfix {
 *******************/
 
 @media screen and (min-width: 781px){
+
 	img{
 	width: 20px;
     height: 20px;
@@ -308,12 +317,11 @@ html[xmlns] .clearfix {
 		width: 50%;
 		margin-bottom: 2%;
 		
+		
 
 		
 }
-	.form-row{
-		
-	}
+	
 	form{
 		max-width: 80%;
 		margin: 0 auto;
@@ -338,6 +346,12 @@ html[xmlns] .clearfix {
 		color: #333;
 
 	}
+	#slider{
+		width: 44%;
+		float: left;
+		margin-top: 10px;
+		
+	}
 	
 		input[type=submit],input[type=reset]{
 		font-size: 3rem;
@@ -348,7 +362,7 @@ html[xmlns] .clearfix {
 	}
 	.buttons {
 		
-		padding-bottom: 3%;
+		padding: 4% 0;
 	
 		align-content: center;
 		
