--- a/css/form.css
+++ b/css/form.css
@@ -14,139 +14,181 @@ to get your font sizes
 
 }
 
-html,
-
 body {
 
 	font-family: Arial, Helvetica, sans-serif;
-
-	background: #cecece;
-	
-
-}
-
-body {
-
-
-
-}
-
-h1,
-
-h2 {
-
-	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
-
-	padding-left: 10%;
-	padding-right: 20%
 
 }
 
 h1 {
 
-	font-size: 3.6rem;
+	font-family: "raleway-n1", "raleway", sans-serif;
 
-	color: #FC3;
+	font-style: normal;
+
+	font-weight: 200;
+
+	padding-left: 5%;
+
+	padding-right: 20%;
+
+	padding-bottom: 5%;
+
+	padding-top: 5%;
+
+	font-size: 6rem;
+
+	color: white;
+
+	text-shadow: 2px 2px 8px black;
 
 }
 
 h2 {
 
-	font-size: 2.4rem;
+	padding-top: 4%;
+
+	padding-left: 10%;
+
+	padding-right: 10%;
+
+	text-align: center;
+
+	font-size: 3.5rem;
+
+	font-family: "almendra", serif;
+
+	color: #FFA51A;
 
 }
 
-.p1{
+.p1 {
+
 	font-size: 1.5rem;
+
 	padding: 5% 10%;
+
 }
-h1,h2,p{
-		width: 80%;
-	}
 
 /******************
 Layout
 *******************/
+
 .wrapper {
-	
+
 	max-width: 1100px;
+
 	margin: 0 auto;
-	
+
+	background-color: #fcfbef;
+
 }
 
-.masthead {
+header {
 
-	background: #666;
+	background-image: url('../png/hotel.png');
 
-	color: #fff;
+	background-repeat: no-repeat;
 
-	border-bottom: 6px solid #333;
+	background-size: cover;
+
+	background-position: center;
+
+	border-bottom: 3px solid #0D77D6;
+
+	-webkit-box-shadow: 0px 1px 1px #030303;
+
+	-moz-box-shadow: 0px 1px 1px #030303;
+
+	box-shadow: 0px 1px 10px #030303;
 
 }
 
 .foot {
-    clear: both;
-	background: #666;
 
-	color: #fff;
+	clear: both;
 
-	padding-left: 10%;
-	padding-bottom: 10px;
-	padding-top: 10px;
+	background: #034163;
 
-	border-top: 6px solid #333;
-
-}
-img{
-	padding: 7px;
-	float:left;
+	color: #ebedee;
 	
+	border-top: 3px solid #fcfbef;
+
+	border-top-style: dotted;
+
+	padding: 2% 0% 2% 15%;
+
 }
 
+img {
+
+	padding: 7px;
+
+	float: left;
+
+}
 
 /******************
 	Form
 *******************/
 
 @media screen and (max-width: 500px) {
-	
-	.form-row{
-  width: 100%;
-}
-.clearfix:after {
-    content: ".";
-    display: block;
-    clear: both;
-    visibility: hidden;
-    line-height: 0;
-    height: 0;
-}
- 
-.clearfix {
-    display: inline-block;
-}
- 
-html[xmlns] .clearfix {
-    display: block;
-}
- 
-* html .clearfix {
-    height: 1%;
-}
-	
+
+	.form-row {
+
+		width: 100%;
+
+	}
+
+	.clearfix:after {
+
+		content: ".";
+
+		display: block;
+
+		clear: both;
+
+		visibility: hidden;
+
+		line-height: 0;
+
+		height: 0;
+
+	}
+
+	.clearfix {
+
+		display: inline-block;
+
+	}
+
+	html[xmlns] .clearfix {
+
+		display: block;
+
+	}
+
+	* html .clearfix {
+
+		height: 1%;
+
+	}
 
 	form {
 
 		width: 80%;
+
 		padding-left: 10%;
+
 		padding-right: 10%;
 
 	}
 
 	.formBox {
+
 		margin-bottom: 20px;
+
 		margin-top: 20px;
- 
 
 	}
 
@@ -155,20 +197,18 @@ html[xmlns] .clearfix {
 		display: block;
 
 		width: 100%;
+
 		padding-left: 15%;
+
 		padding-bottom: 4px;
 
 		text-align: left;
 
 		font-size: 1.2rem;
-      
-		overflow: scroll;
-		
+
 		color: #666;
 
-
 		/* more space on the top than the bottom */
-
 
 	}
 
@@ -185,65 +225,85 @@ html[xmlns] .clearfix {
 		font-size: 1.2rem;
 
 		padding: 0.5rem 0rem;
-			
+
 		color: #333;
-		
+
 		width: 80%;
 
 	}
 
 	input[type=submit],
 
-	input[type=reset]{
+	input[type=reset] {
+
 		font-size: 3rem;
+
 		height: 50px;
+
 		width: 100%;
+
 		margin-bottom: 3%;
+
 		margin-top: 3%;
 
-	
 	}
+
 	.buttons {
-		
-		padding: 5%;
-	
 
+		padding: 5%;
 
 	}
-	#slider{
+
+	#slider {
+
 		margin-top: 10px;
-		
+
 	}
 
 }
-
 
 /******************
 	Form
 *******************/
 
 @media screen and (max-width: 780px) and (min-width: 501px) {
-	label{
-	width: 42%;
-	text-align:left;
-	float:left;
-	margin: 0 1rem 0 0 ;
-	font-size: 1.2rem;
-	padding:0.6rem 0;
-	color: #666;
-		}
-	
-	.formBox{
-	clear: both;	
-	margin: 1.0rem 0;
-	max-width: 80%;
-	padding: 2% 10%;
-}
 
-	select{
-		margin-top: 10px;
+	label {
+
+		width: 42%;
+
+		text-align: left;
+
+		float: left;
+
+		margin: 0 1rem 0 0;
+
+		font-size: 1.2rem;
+
+		padding: 0.6rem 0;
+
+		color: #666;
+
 	}
-	
+
+	.formBox {
+
+		clear: both;
+
+		margin: 1.0rem 0;
+
+		max-width: 80%;
+
+		padding: 2% 10%;
+
+	}
+
+	select {
+
+		margin-top: 10px;
+
+	}
+
 	input[type=text],
 
 	input[type=number],
@@ -257,37 +317,44 @@ html[xmlns] .clearfix {
 		font-size: 1.2rem;
 
 		padding: 0.5rem 0rem;
-			
+
 		color: #333;
-		
+
 		width: 40%;
 
 	}
-	
-	#slider{
-		width: 50%;
-		float: right;
-	}
-	
-		input[type=submit],input[type=reset]{
-		font-size: 3rem;
-        height: 50px;
-        width: 49%;
 
-	
+	#slider {
+
+		width: 50%;
+
+		float: right;
+
 	}
+
+	input[type=submit],
+
+	input[type=reset] {
+
+		font-size: 3rem;
+
+		height: 50px;
+
+		width: 49%;
+
+	}
+
 	.buttons {
-		
+
 		padding: 5% 0;
-	
+
 		align-content: center;
-		
+
 		margin: 0 auto;
-	
+
 		max-width: 50%;
 
 	}
-	
 
 }
 
@@ -295,38 +362,62 @@ html[xmlns] .clearfix {
 	Form
 *******************/
 
-@media screen and (min-width: 781px){
+@media screen and (min-width: 781px) {
 
-	img{
-	width: 20px;
-    height: 20px;
-	padding: 3px 3px 3px 7px;
-	float:left;
- 
-}
-		label{
-	text-align:right;
-	float:left;
-	font-size: 100%;
-	padding:0.3rem 0;
-	color: #666;
-		}
-	
-	.formBox {	
-		float:left;
-		width: 50%;
-		margin-bottom: 2%;
-		
-		
+	.p1 {
 
-		
-}
-	
-	form{
-		max-width: 80%;
-		margin: 0 auto;
+		font-size: 1.5rem;
+
+		padding: 3% 40% 5% 15%;
+
 	}
-	
+
+	img {
+
+		width: 20px;
+
+		height: 20px;
+
+		padding: 3px 3px 3px 7px;
+
+		float: left;
+
+	}
+
+	label {
+
+		text-align: right;
+
+		float: left;
+
+		font-size: 100%;
+
+		padding: 0.3rem 0;
+
+		color: #666;
+
+	}
+
+	.formBox {
+
+		float: left;
+
+		width: 50%;
+
+		margin-bottom: 2%;
+
+	}
+
+	form {
+
+		max-width: 80%;
+
+		margin: 0 auto;
+
+		padding-left: 9%;
+
+	}
+
 	input[type=text],
 
 	input[type=number],
@@ -338,43 +429,55 @@ html[xmlns] .clearfix {
 		text-align: left;
 
 		font-size: 1.1rem;
-		
-		width:44%;
-		
-		float:left;
-	
+
+		width: 44%;
+
+		float: left;
+
 		color: #333;
 
 	}
-	#slider{
-		width: 44%;
-		float: left;
-		margin-top: 10px;
-		
-	}
-	
-		input[type=submit],input[type=reset]{
-		font-size: 3rem;
-        height: 50px;
-        width: 49%;
 
-	
+	#slider {
+
+		width: 44%;
+
+		float: left;
+
+		margin-top: 10px;
+
 	}
+
+	input[type=submit],
+
+	input[type=reset] {
+
+		font-size: 3rem;
+
+		height: 50px;
+
+		width: 49%;
+
+	}
+
 	.buttons {
-		
-		padding: 4% 0;
-	
+
+		padding-bottom: 4%;
+
+		padding-top: 25%;
+
 		align-content: center;
-		
-		margin: 0 auto;
-	
+
+		margin-left: 20%;
+
 		max-width: 50%;
 
 	}
-	
+
+	.main {
+
+		padding-bottom: 80px;
+
+	}
 
 }
-	
-	
-
-
